language/move-lang/tests/move_check/typing/mutate_non_ref.exp
error: 

   ┌── tests/move_check/typing/mutate_non_ref.move:6:17 ───
   │
 7 │         *u = 1;
   │          ^ Invalid mutation. Expected a mutable reference
   ·
 6 │         let u = 0;
   │                 - The type: 'u64'
   ·
 7 │         *u = 1;
   │          - Is is not compatible with: '&mut _'
   │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:9:17 ───
    │
 10 │         *s = S { f: 0 };
    │          ^ Invalid mutation. Expected a mutable reference
    ·
 9 │         let s = S { f: 0 };
    │                 ---------- The type: '0000000000000000000000000000000000000000000000000000000008675309.M.S'
    ·
 10 │         *s = S { f: 0 };
    │          - Is is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
 11 │         *s.f = 0;
    │          ^^^ Invalid mutation. Expected a mutable reference
    ·
 2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 11 │         *s.f = 0;
    │          --- Is is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
 14 │         *s_ref.f = 0;
    │          ^^^^^^^ Invalid mutation. Expected a mutable reference
    ·
 2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 14 │         *s_ref.f = 0;
    │          ------- Is is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:3:19 ───
    │
 17 │         *x.s = S { f: 0 };
    │          ^^^ Invalid mutation. Expected a mutable reference
    ·
 3 │     struct X { s: S }
    │                   - The type: '0000000000000000000000000000000000000000000000000000000008675309.M.S'
    ·
 17 │         *x.s = S { f: 0 };
    │          --- Is is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:17:10 ───
    │
 17 │         *x.s = S { f: 0 };
    │          ^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
 18 │         *x.s.f = 0;
    │          ^^^^^ Invalid mutation. Expected a mutable reference
    ·
 2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 18 │         *x.s.f = 0;
    │          ----- Is is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:3:19 ───
    │
 21 │         *x_ref.s = S{ f: 0 };
    │          ^^^^^^^ Invalid mutation. Expected a mutable reference
    ·
 3 │     struct X { s: S }
    │                   - The type: '0000000000000000000000000000000000000000000000000000000008675309.M.S'
    ·
 21 │         *x_ref.s = S{ f: 0 };
    │          ------- Is is not compatible with: '&mut _'
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:21:10 ───
    │
 21 │         *x_ref.s = S{ f: 0 };
    │          ^^^^^^^ Invalid implicit copy of field 's'. Try adding '*&' to the front of the field access
    │

error: 

    ┌── tests/move_check/typing/mutate_non_ref.move:2:19 ───
    │
 22 │         *x_ref.s.f = 0;
    │          ^^^^^^^^^ Invalid mutation. Expected a mutable reference
    ·
 2 │     struct S { f: u64 }
    │                   --- The type: 'u64'
    ·
 22 │         *x_ref.s.f = 0;
    │          --------- Is is not compatible with: '&mut _'
    │

